--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     </div>
                     <div class="topbar">
                         <div class="topbar__left">
-                            <div class="pill">
+                            <div class="pill" id="dompet">
                                 <span class="pill__text">MYR 1,570.00</span>
                                 <span class="pill__iconBtn" aria-label="Wallet">
                                     <!-- wallet icon -->
@@ -1373,4 +1373,5 @@
 
 </body>
 </html>
+
 
