--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
             <section class="mt-3">
                 <div class="vendor-tabs">
                     <div class="vendor-rail">
-                        <div class="vender-filter">
+                        <div class="vendor-filter">
                             <ul class="filter">
                                 <li class="filter-btn active" data-filter="all">
                                     <span>
@@ -602,17 +602,17 @@
                                 </li>
                                 <li class="filter-btn" data-filter="hot">
                                     <span>
-                                        <svg viewBox="0 0 24 24"><path d="M10 0s8 7.58 8 12a8 8 0 1 1-16 0c0-1.5.91-3.35 2.12-5.15A3 3 0 0 0 10 6V0zM8 0a3 3 0 1 0 0 6V0z" /></svg>
+                                        <svg viewBox="-1 -1 24 24"><path d="M10 0s8 7.58 8 12a8 8 0 1 1-16 0c0-1.5.91-3.35 2.12-5.15A3 3 0 0 0 10 6V0zM8 0a3 3 0 1 0 0 6V0z" /></svg>
                                     </span>Hot
                                 </li>
                                 <li class="filter-btn" data-filter="bigwin">
                                     <span>
-                                        <svg viewBox="0 0 20 20" preserveAspectRatio="xMinYMin" class="jam jam-crown"><path d='M2.776 5.106L3.648 11h12.736l.867-5.98-3.493 3.02-3.755-4.827-3.909 4.811-3.318-2.918zm10.038-1.537l-.078.067.141.014 1.167 1.499 1.437-1.242.14.014-.062-.082 2.413-2.086a1 1 0 0 1 1.643.9L18.115 13H1.922L.399 2.7a1 1 0 0 1 1.65-.898L4.35 3.827l-.05.06.109-.008 1.444 1.27 1.212-1.493.109-.009-.06-.052L9.245.976a1 1 0 0 1 1.565.017l2.005 2.576zM2 14h16v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z' /></svg>
+                                        <svg viewBox="0 -1 20 20" preserveAspectRatio="xMinYMin" class="jam jam-crown"><path d='M2.776 5.106L3.648 11h12.736l.867-5.98-3.493 3.02-3.755-4.827-3.909 4.811-3.318-2.918zm10.038-1.537l-.078.067.141.014 1.167 1.499 1.437-1.242.14.014-.062-.082 2.413-2.086a1 1 0 0 1 1.643.9L18.115 13H1.922L.399 2.7a1 1 0 0 1 1.65-.898L4.35 3.827l-.05.06.109-.008 1.444 1.27 1.212-1.493.109-.009-.06-.052L9.245.976a1 1 0 0 1 1.565.017l2.005 2.576zM2 14h16v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z' /></svg>
                                     </span>Big Win
                                 </li>
                                 <li class="filter-btn" data-filter="fav">
                                     <span>
-                                        <svg class="heart" viewBox="0 0 20 20" preserveAspectRatio="xMidYMid meet"> <path d="M4.03553 1C1.80677 1 0 2.80677 0 5.03553C0 6.10582 0.42517 7.13228 1.18198 7.88909L7.14645 13.8536C7.34171 14.0488 7.65829 14.0488 7.85355 13.8536L13.818 7.88909C14.5748 7.13228 15 6.10582 15 5.03553C15 2.80677 13.1932 1 10.9645 1C9.89418 1 8.86772 1.42517 8.11091 2.18198L7.5 2.79289L6.88909 2.18198C6.13228 1.42517 5.10582 1 4.03553 1Z" /> </svg>
+                                        <svg class="heart" viewBox="-2 -2 19 19" preserveAspectRatio="xMidYMid meet"> <path d="M4.03553 1C1.80677 1 0 2.80677 0 5.03553C0 6.10582 0.42517 7.13228 1.18198 7.88909L7.14645 13.8536C7.34171 14.0488 7.65829 14.0488 7.85355 13.8536L13.818 7.88909C14.5748 7.13228 15 6.10582 15 5.03553C15 2.80677 13.1932 1 10.9645 1C9.89418 1 8.86772 1.42517 8.11091 2.18198L7.5 2.79289L6.88909 2.18198C6.13228 1.42517 5.10582 1 4.03553 1Z" /> </svg>
                                     </span>Favorites
                                 </li>
                             </ul>
