--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <button data-action="toggle-sidebar" class="btn btn-2 btn-pill d-md-none">
                             <svg width="20px" height="20px" viewBox="0 0 1024 1024" class="icon"><path d="M364.8 106.666667L298.666667 172.8 637.866667 512 298.666667 851.2l66.133333 66.133333L768 512z" /></svg>
                         </button>
-                        <img src="image/logo-testing.png" style="height:36px;" />
+                        <img src="image/logo-testing.png" class="logo-img" />
                     </div>
                     <div class="topbar">
                         <div class="topbar__left">
