--- a/index.html
+++ b/index.html
@@ -172,7 +172,12 @@
                                     </li>
                                     <li class="app">
                                         <a href="#" class="app-badge">
-                                            <img src="image/icn-testing2.png" />
+                                            <div class="mini-icons">
+                                                <img src="image/icn-testing.png" />
+                                                <img src="image/icn-testing.png" />
+                                                <img src="image/icn-testing.png" />
+                                                <img src="image/icn-testing.png" />
+                                            </div>
                                             More
                                         </a>
                                     </li>
