--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="js/swiper-11.2.10/swiper-bundle.min.css" />
     <script src="js/swiper-11.2.10/swiper-bundle.min.js"></script>
 
-    <link href="css/css-afterlogin.css" rel="stylesheet" />
-
+    <link href="css/css-afterlogin.cleaned.css" rel="stylesheet" />
 
     <style>
         :root { --bg-color: #1b2033; --font-color: #fff; --primary-color: #c084fc; --secondary-color: #2b3248; --accent-color: #c084fc; }
@@ -27,10 +26,10 @@
     <div id="layout">
         <section class="sectiondownload">
             <div class="d-flex align-items-center justify-content-between">
-                <div class="downlaod-icon">
+                <div class="download-icon">
                     <img src="image/icn-testing.png" />
                 </div>
-                <div class="doanload-content">
+                <div class="download-content">
                     Read to play? Download App now.
                     <br />
                     Earn daily free reward!
@@ -118,21 +117,20 @@
                                     <div class="nav-tlb">
                                         <ul class="d-flex m-0 p-0">
                                             <li class="list-unstyled">
-                                                <div class="btn btn-2 btn-pill p-1 d-flex align-items-center" aria-label="Wallet">
+                                                <div class="btn btn-2 btn-pill d-flex align-items-center" aria-label="Wallet">
                                                     <!-- wallet icon -->
                                                     <svg viewBox="-6 -6 28 28" class="icon">
                                                         <path d="M14.5 4h-12.12c-0.057 0.012-0.123 0.018-0.19 0.018-0.552 0-1-0.448-1-1 0-0.006 0-0.013 0-0.019l12.81-0.499v-1.19c0.005-0.041 0.008-0.089 0.008-0.138 0-0.652-0.528-1.18-1.18-1.18-0.049 0-0.097 0.003-0.144 0.009l-11.374 1.849c-0.771 0.289-1.31 1.020-1.31 1.877 0 0.011 0 0.023 0 0.034l-0 10.728c-0 0.003-0 0.006-0 0.010 0 0.828 0.672 1.5 1.5 1.5 0 0 0 0 0 0h13c0 0 0 0 0 0 0.828 0 1.5-0.672 1.5-1.5 0-0.004-0-0.007-0-0.011v-8.999c0-0.012 0.001-0.027 0.001-0.041 0-0.801-0.649-1.45-1.45-1.45-0.018 0-0.036 0-0.053 0.001zM13 11c-0.828 0-1.5-0.672-1.5-1.5s0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5s-0.672 1.5-1.5 1.5z"></path>
                                                     </svg>
                                                     <span class="pill__text">MYR 157.12K</span>
-                                                    <button class="btn plan btn-pill ml-1 mr--2">
+                                                    <button class="btn plan btn-pill ml-1 mr--2 mr-n2">
                                                         <svg class="pill__iconBtn plan small" aria-label="WalletRefresh" viewBox="-1.5 -2.5 24 24"><path d='M17.83 4.194l.42-1.377a1 1 0 1 1 1.913.585l-1.17 3.825a1 1 0 0 1-1.248.664l-3.825-1.17a1 1 0 1 1 .585-1.912l1.672.511A7.381 7.381 0 0 0 3.185 6.584l-.26.633a1 1 0 1 1-1.85-.758l.26-.633A9.381 9.381 0 0 1 17.83 4.194zM2.308 14.807l-.327 1.311a1 1 0 1 1-1.94-.484l.967-3.88a1 1 0 0 1 1.265-.716l3.828.954a1 1 0 0 1-.484 1.941l-1.786-.445a7.384 7.384 0 0 0 13.216-1.792 1 1 0 1 1 1.906.608 9.381 9.381 0 0 1-5.38 5.831 9.386 9.386 0 0 1-11.265-3.328z' /></svg>
                                                     </button>
                                                 </div>
-
                                                 
                                             </li>
-                                            <li class="list-unstyled ms-4">
-                                                <button class="btn btn-2 btn-pill p-1" aria-label="Gift">
+                                            <li class="list-unstyled">
+                                                <button class="btn btn-2 btn-pill" aria-label="Gift">
                                                     <!-- gift icon -->
                                                     <svg viewBox="-1 -1 18 18" preserveAspectRatio="xMidYMid meet" class="icon" aria-hidden="true">
                                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M4.5 0C3.11929 0 2 1.11929 2 2.5V2.78571C2 3.23408 2.13327 3.65133 2.36235 4H1.5C0.671573 4 0 4.67157 0 5.5V6.5C0 7.32843 0.671573 8 1.5 8H7V4H8V8H13.5C14.3284 8 15 7.32843 15 6.5V5.5C15 4.67157 14.3284 4 13.5 4H12.6377C12.8667 3.65133 13 3.23408 13 2.78571V2.5C13 1.11929 11.8807 0 10.5 0C9.22684 0 8.11245 0.679792 7.5 1.69621C6.88755 0.679792 5.77316 0 4.5 0ZM8 4H10.7857C11.4563 4 12 3.45635 12 2.78571V2.5C12 1.67157 11.3284 1 10.5 1C9.11929 1 8 2.11929 8 3.5V4ZM7 4H4.21429C3.54365 4 3 3.45635 3 2.78571V2.5C3 1.67157 3.67157 1 4.5 1C5.88071 1 7 2.11929 7 3.5V4Z" />
@@ -149,12 +147,12 @@
                             </div>
                         </div>
                         <div class="nav-b">
-                            <a herf="#" class="btn-deposit btn btn-1 btn-pill btnh">Deposit</a>
-                            <a herf="#" class="btn-withdraw btn btn-1 btn-pill btnh">Withdraw</a>
+                            <a herf="#" class="btn-deposit btn btn-1 btn-pill btnh btn--hover">Deposit</a>
+                            <a herf="#" class="btn-withdraw btn btn-1 btn-pill btnh btn--hover">Withdraw</a>
                             <button data-action="toggle-app" class="d-md-none btn btn-1  btn-pill">
                                 <svg width="23px" height="23px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M10,13H3a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,10,13ZM9,20H4V15H9ZM21,2H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,21,2ZM20,9H15V4h5Zm1,4H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,21,13Zm-1,7H15V15h5ZM10,2H3A1,1,0,0,0,2,3v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,10,2ZM9,9H4V4H9Z" /></svg>
                             </button>
-                            <button data-action="toggle-sidebar" class="btn btn-2 btn-pill btnh">
+                            <button data-action="toggle-sidebar" class="btn btn-2 btn-pill btnh btn--hover">
                                 <svg width="20px" height="20px" viewBox="0 0 1024 1024" class="icon"><path d="M364.8 106.666667L298.666667 172.8 637.866667 512 298.666667 851.2l66.133333 66.133333L768 512z" /></svg>
                             </button>
                         </div>
@@ -346,7 +344,7 @@
                     </div>
                     <div class="topbar">
                         <div class="topbar__left">
-                            <div class="btn btn-1 btn-pill btnwicon btnnonh" id="dompet">
+                            <div class="btn btn-1 btn-pill btnwicon btn-with-icon btnnonh btn--no-hover" id="dompet">
                                 <span class="pill__iconBtn" aria-label="Wallet">
                                     <!-- wallet icon -->
                                     <svg viewBox="-6 -6 28 28">
@@ -354,12 +352,12 @@
                                     </svg>
                                 </span>
                                 <span class="pill__text">MYR 157.12K</span>
-                                <button class="btn plan btn-pill ml-1 mr--2">
+                                <button class="btn plan btn-pill ml-1 mr--2 mr-n2">
                                     <svg class="pill__iconBtn plan small" aria-label="WalletRefresh" viewBox="-1.5 -2.5 24 24"><path d='M17.83 4.194l.42-1.377a1 1 0 1 1 1.913.585l-1.17 3.825a1 1 0 0 1-1.248.664l-3.825-1.17a1 1 0 1 1 .585-1.912l1.672.511A7.381 7.381 0 0 0 3.185 6.584l-.26.633a1 1 0 1 1-1.85-.758l.26-.633A9.381 9.381 0 0 1 17.83 4.194zM2.308 14.807l-.327 1.311a1 1 0 1 1-1.94-.484l.967-3.88a1 1 0 0 1 1.265-.716l3.828.954a1 1 0 0 1-.484 1.941l-1.786-.445a7.384 7.384 0 0 0 13.216-1.792 1 1 0 1 1 1.906.608 9.381 9.381 0 0 1-5.38 5.831 9.386 9.386 0 0 1-11.265-3.328z' /></svg>
                                 </button>
                             </div>
 
-                            <div class="btn btn-1 btn-pill btnwicon btnnonh">
+                            <div class="btn btn-1 btn-pill btnwicon btn-with-icon btnnonh btn--no-hover">
                                 <button class="pill__iconBtn" aria-label="Gift">
                                     <!-- gift icon -->
                                     <svg viewBox="0 0 15 15">
@@ -371,7 +369,7 @@
                                 <span class="pill__text">9,000,000</span>
                             </div>
 
-                            <a href="#" class="btn btn-1 btn-pill btnwicon btnnonh" id="playerBtn" type="button">
+                            <a href="#" class="btn btn-1 btn-pill btnwicon btn-with-icon btnnonh btn--no-hover" id="playerBtn" type="button">
                                 <span class="pill__iconBtn" aria-label="Player">
                                     <svg viewBox="-5 -3 24 24" xmlns="http://www.w3.org/2000/svg" class="cf-icon-svg"><path d="M12.517 12.834v1.9a1.27 1.27 0 0 1-1.267 1.267h-9.5a1.27 1.27 0 0 1-1.267-1.267v-1.9A3.176 3.176 0 0 1 3.65 9.667h5.7a3.176 3.176 0 0 1 3.167 3.167zM3.264 5.48A3.236 3.236 0 1 1 6.5 8.717a3.236 3.236 0 0 1-3.236-3.236z" /></svg>
 
@@ -1711,31 +1709,23 @@
 
     </script>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const btn = document.getElementById('btn-settingsbox');
-            const toggle = document.getElementById('togglesettings');
+        document.addEventListener("click", (e) => {
+            const btn = e.target.closest("#btn-settingsbox");
+            if (!btn) return;
 
-            btn.addEventListener('click', () => {
-                // 如果你真的有 bootstrap modal，就留着
-                document.querySelectorAll('.modal').forEach(m => {
-                    m.classList.remove('show');
-                });
+            const box = document.querySelector("#togglesettings");
+            if (!box) return;
 
-                const isOpen = toggle.classList.contains('open');
+            const isOpen = box.classList.contains("open");
+            box.classList.toggle("open", !isOpen);
 
-                if (isOpen) {
-                    // 关
-                    btn.classList.add('btn-setting__close');
-                    btn.classList.remove('btn-setting__open');
-                    toggle.classList.remove('open');
-                } else {
-                    // 开
-                    btn.classList.remove('btn-setting__close');
-                    btn.classList.add('btn-setting__open');
-                    toggle.classList.add('open');
-                }
-            });
+            btn.classList.toggle("btn-setting__open", isOpen);
+            btn.classList.toggle("btn-setting__close", !isOpen);
+
+            // 无障碍：告诉读屏当前状态
+            btn.setAttribute("aria-expanded", String(!isOpen));
         });
+
 
 
 
