--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="js/swiper-11.2.10/swiper-bundle.min.css" />
     <script src="js/swiper-11.2.10/swiper-bundle.min.js"></script>
 
-    <link href="css/css-afterlogin.cleaned.css" rel="stylesheet" />
+    <link href="css/css-afterlogin.css" rel="stylesheet" />
 
     <style>
         :root { --bg-color: #1b2033; --font-color: #fff; --primary-color: #c084fc; --secondary-color: #2b3248; --accent-color: #c084fc; }
