--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <div class="topbar">
                         <div class="topbar__left">
                             <div class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover" id="dompet">
-                                <span class="pill__iconBtn" aria-label="Wallet">
+                                <span class="pill__iconBtn btn--no-active" aria-label="Wallet">
                                     <!-- wallet icon -->
                                     <svg class="icon" viewBox="-3 -3 24 24">
                                         <path d="M14.5 4h-12.12c-0.057 0.012-0.123 0.018-0.19 0.018-0.552 0-1-0.448-1-1 0-0.006 0-0.013 0-0.019l12.81-0.499v-1.19c0.005-0.041 0.008-0.089 0.008-0.138 0-0.652-0.528-1.18-1.18-1.18-0.049 0-0.097 0.003-0.144 0.009l-11.374 1.849c-0.771 0.289-1.31 1.020-1.31 1.877 0 0.011 0 0.023 0 0.034l-0 10.728c-0 0.003-0 0.006-0 0.010 0 0.828 0.672 1.5 1.5 1.5 0 0 0 0 0 0h13c0 0 0 0 0 0 0.828 0 1.5-0.672 1.5-1.5 0-0.004-0-0.007-0-0.011v-8.999c0-0.012 0.001-0.027 0.001-0.041 0-0.801-0.649-1.45-1.45-1.45-0.018 0-0.036 0-0.053 0.001zM13 11c-0.828 0-1.5-0.672-1.5-1.5s0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5s-0.672 1.5-1.5 1.5z"></path>
@@ -360,7 +360,7 @@
                             </div>
 
                             <div class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover icon-right">
-                                <button class="pill__iconBtn" aria-label="Gift">
+                                <button class="pill__iconBtn btn--no-active" aria-label="Gift">
                                     <!-- gift icon -->
                                     <svg class="icon" viewBox="-2 -2 20 20">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M4.5 0C3.11929 0 2 1.11929 2 2.5V2.78571C2 3.23408 2.13327 3.65133 2.36235 4H1.5C0.671573 4 0 4.67157 0 5.5V6.5C0 7.32843 0.671573 8 1.5 8H7V4H8V8H13.5C14.3284 8 15 7.32843 15 6.5V5.5C15 4.67157 14.3284 4 13.5 4H12.6377C12.8667 3.65133 13 3.23408 13 2.78571V2.5C13 1.11929 11.8807 0 10.5 0C9.22684 0 8.11245 0.679792 7.5 1.69621C6.88755 0.679792 5.77316 0 4.5 0ZM8 4H10.7857C11.4563 4 12 3.45635 12 2.78571V2.5C12 1.67157 11.3284 1 10.5 1C9.11929 1 8 2.11929 8 3.5V4ZM7 4H4.21429C3.54365 4 3 3.45635 3 2.78571V2.5C3 1.67157 3.67157 1 4.5 1C5.88071 1 7 2.11929 7 3.5V4Z" />
@@ -372,7 +372,7 @@
                             </div>
 
                             <a href="#" class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover" id="playerBtn" type="button">
-                                <span class="pill__iconBtn" aria-label="Player">
+                                <span class="pill__iconBtn btn--no-active" aria-label="Player">
                                     <svg class="icon" viewBox="-3 -1 20 20"><path d="M12.517 12.834v1.9a1.27 1.27 0 0 1-1.267 1.267h-9.5a1.27 1.27 0 0 1-1.267-1.267v-1.9A3.176 3.176 0 0 1 3.65 9.667h5.7a3.176 3.176 0 0 1 3.167 3.167zM3.264 5.48A3.236 3.236 0 1 1 6.5 8.717a3.236 3.236 0 0 1-3.236-3.236z" /></svg>
 
                                 </span>
