--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                                 </button>
                             </div>
 
-                            <div class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover icon-right">
+                            <div class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover icon-right p_p1">
                                 <button class="pill__iconBtn btn--no-active" aria-label="Gift">
                                     <!-- gift icon -->
                                     <svg class="icon" viewBox="-2 -2 20 20">
@@ -371,7 +371,7 @@
                                 <span class="pill__text">9,000,000</span>
                             </div>
 
-                            <a href="#" class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover" id="playerBtn" type="button">
+                            <a href="#" class="btn btn-1 btn-pill btn-with-icon btn--no-active btn--no-hover  p_p1" id="playerBtn" type="button">
                                 <span class="pill__iconBtn btn--no-active" aria-label="Player">
                                     <svg class="icon" viewBox="-3 -1 20 20"><path d="M12.517 12.834v1.9a1.27 1.27 0 0 1-1.267 1.267h-9.5a1.27 1.27 0 0 1-1.267-1.267v-1.9A3.176 3.176 0 0 1 3.65 9.667h5.7a3.176 3.176 0 0 1 3.167 3.167zM3.264 5.48A3.236 3.236 0 1 1 6.5 8.717a3.236 3.236 0 0 1-3.236-3.236z" /></svg>
 
